[package]
name = "crustracer"
version = "0.1.0"
authors = ["Kleber <kecho_garcia@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.3", features = [ "bundled", "static-link" ] }
gl = "0.14.0"